--- a/style_vr2.css
+++ b/style_vr2.css
@@ -192,14 +192,19 @@ padding: 200px 0 0 100px;
     background-image: url(./svg/sun_kit.svg)  ;
     background-size: contain;
 } */
-    .bg-wrap{
+.bg-wrap-top{
     top: 300px;
     z-index: -10;
-
 }
+.bg-wrap-butt{
+    bottom: 0;
+    z-index: -10;
+}
+
+
   .section1{
       width: 100%;
-      height: 4500px;
+      height: 4100px;
       /* top: 0;
       left: 0px; */
   }
@@ -300,7 +305,49 @@ padding: 200px 0 0 100px;
     width: 1000px;
     padding: 100px 0;
 }
-.slider{
-    width: 1500px;
-    height: 450px;
+.section2{
+    width: 100%;
+    height: 800px;
+    margin-top: -350px;
+}
+
+/* skate pork carousel */
+
+
+.slider-wrap {
+    width: 1000px;
+    height: 320px;
+    overflow: hidden;
+}
+
+.slider-wrap-img {
+    right: 0;
+    width: 4200px;
+    transition: .5s;
+}
+
+.slider-wrap-img li {
+    flex: 1 0 0;
+    margin: 0 10px;
+}
+
+.slider-wrap-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.slider-dots li {
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    border: 1px solid rgb(151, 151, 151);
+    /* background-color: rgba(250, 250, 250, .5); */
+    margin: 3px;
+}
+
+.slider-dots {
+    margin: 0 10px;
+    bottom: 0;
+    right: 0;
 }
